--- a/theme.scss
+++ b/theme.scss
@@ -1,17 +1,17 @@
 /*-- scss:default --*/
-$font-family-base:  -apple-system, BlinkMacSystemFont, "Apple Color Emoji", 
-"Segoe UI Emoji", "Segoe UI Symbol", "Segoe UI", "PingFang SC", 
-HarmonyOS_Regular, "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", 
-Helvetica, "Source Han Sans SC", "Noto Sans CJK SC", "WenQuanYi Micro Hei", 
-Arial, sans-serif !default;
+$font-family-base:  -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial,
+    "PingFang SC", "Hiragino Sans GB", STHeiti, "Microsoft YaHei", "Microsoft JhengHei",
+    "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", 
+    "Source Han Sans TC", "Noto Sans CJK TC", "WenQuanYi Micro Hei", SimSun, sans-serif !default;
 
-$headings-font-family: STZhongsong, STSong, "Noto Serif CJK", "Noto Serif SC", PMingLiu,
-    SimSun, "WenQuanYi Bitmap Song", "Times New Roman", Times, serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$headings-font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial,
+    "PingFang SC", "Hiragino Sans GB", STHeiti, "Microsoft YaHei", "Microsoft JhengHei",
+    "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", 
+    "Source Han Sans TC", "Noto Sans CJK TC", "WenQuanYi Micro Hei", SimSun, sans-serif !default;
 
 $font-family-code: "Fira Code", Menlo, Monaco, Consolas,"Courier New", monospace, 
-ui-monospace, SFMono-Regular, "SF Mono", "Cascadia Code",
-"Segoe UI Mono", "Source Code Pro", "Liberation Mono" !default;
+    ui-monospace, SFMono-Regular, "SF Mono", "Cascadia Code",
+    "Segoe UI Mono", "Source Code Pro", "Liberation Mono" !default;
 
 $line-height-base: 1.7 !default;
 
@@ -20,13 +20,16 @@ $h2-font-size: 1.25 !default;
 $h3-font-size: 1 !default;
 
 /*-- scss:rules --*/
+#body {
+    font-family: $font-family-base;
+}
 .navbar {
-    font-family: $headings-font-family;
+    font-family: $font-family-base;
     font-size: 1.2rem;
 }
 
 #title-block-header > div.quarto-title-banner.page-columns.page-full > div > h1{
-    font-size: 2.5rem;
+    font-size: 3rem;
 }
 
 #title-block-header > div.quarto-title-banner.page-columns.page-full > div > div > div {
@@ -38,13 +41,13 @@ $h3-font-size: 1 !default;
 }
 
 #quarto-header {
-    font-weight: bolder;
+    font-weight: bold;
 }
 
 .navbar-title {
-    font-weight: bolder;
+    font-weight: bold;
 }
 
-#listing-listing > div.list.quarto-listing-default > div:nth-child(1) > div.body > h3 {
-    font-weight: bolder;
+#listing-listing > div.list.quarto-listing-default > div > div.body > h3 > a {
+    font-weight: bold;
 }
